--- a/site/index.html
+++ b/site/index.html
@@ -13,93 +13,9 @@
 </head>
 
 <body>
-  <div class="content-1">
-    <div class="content-1__block block">
-      Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Снова, вдали большой.
-      Рукописи, текст мир обеспечивает вопрос свой заглавных то снова инициал дороге послушавшись.
-    </div>
-    <div class="content-1__block block">
-      Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Снова, вдали большой.
-      Рукописи, текст мир обеспечивает вопрос свой заглавных то снова инициал дороге послушавшись.
-    </div>
-    <br>
-    <br>
-    <span class="content-1__inline inline">
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut atque quasi natus ducimus reiciendis dignissimos.
-      Laborum ipsam assumenda accusantium commodi? Repudiandae fuga ducimus amet et, dignissimos nam voluptatum
-      accusamus quasi!
-    </span>
-    <br>
-    <br>
-    <br>
-    <img class="content-1__image" alt="">
+  <div class="wrapper">
+    <div class="block"></div>
   </div>
-  <div class="line"></div>
-
-  <div class="content-2">
-    <div class="content-2__block-wrapper">
-      <div class="content-2__block block">
-        Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Снова, вдали большой.
-        Рукописи, текст мир обеспечивает вопрос свой заглавных то снова инициал дороге послушавшись.
-      </div>
-    </div>
-    <br>
-    <br>
-    <span class="content-2__inline inline">
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut atque quasi natus ducimus reiciendis dignissimos.
-      Laborum ipsam assumenda accusantium commodi? Repudiandae fuga ducimus amet et, dignissimos nam voluptatum
-      accusamus quasi!
-    </span>
-    <br>
-    <br>
-    <br>
-    <img class="content-2__image" alt="">
-  </div>
-  <div class="line"></div>
-
-  <div class="content-3">
-      <div class="content-3__block block">
-        Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Снова, вдали большой.
-        Рукописи, текст мир обеспечивает вопрос свой заглавных то снова инициал дороге послушавшись.
-    </div>
-    <div class="content-3__block-2 block"></div>
-    <div class="content-3__block-2 block"></div>
-    <div class="content-3__block-2 block"></div>
-    <div class="content-3__block-2 block"></div>
-    <div class="content-3__block-2 block"></div>
-    <div class="content-3__block-2 block"></div>
-    <br>
-    <br>
-    <span class="content-3__inline inline">
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut atque quasi natus ducimus reiciendis dignissimos.
-      Laborum ipsam assumenda accusantium commodi? Repudiandae fuga ducimus amet et, dignissimos nam voluptatum
-      accusamus quasi!
-    </span>
-    <br>
-    <br>
-    <br>
-    <img class="content-3__image" alt="">
-  </div>
-  <div class="line"></div>
-
-  <div class="content-4">
-      <div class="content-4__block block">
-        Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Снова, вдали большой.
-        Рукописи, текст мир обеспечивает вопрос свой заглавных то снова инициал дороге послушавшись.
-    </div>
-    <br>
-    <br>
-    <span class="content-4__inline inline">
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut atque quasi natus ducimus reiciendis dignissimos.
-      Laborum ipsam assumenda accusantium commodi? Repudiandae fuga ducimus amet et, dignissimos nam voluptatum
-      accusamus quasi!
-    </span>
-    <br>
-    <br>
-    <br>
-    <img class="content-4__image" alt="">
-  </div>
-  <div class="line"></div>
 </body>
 
 </html>
