--- a/css10/index.html
+++ b/css10/index.html
@@ -9,27 +9,6 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
   <title>CSS lesson 10</title>
-  <style>
-    div{
-        margin: 10px;
-        border: 1px solid black;
-        font-size: 20px;
-        height: 80px;
-    }
-    #header{ 
-        background-color: #ccc;
-    }
-    #sidebar{
-        background-color: #ddd;
-    }
-    #main{
-        background-color: #eee;
-        height: 200px;
-    }
-    #footer{ 
-        background-color: #ccc;
-    }
-  </style>
 </head>
 
 <body>
@@ -53,11 +32,11 @@
   <section id="content">
     <h3>Академические достижения</h3>
     <p class="lastupdate">
-      <span></span>
+      <span>&nbsp;</span>
       Последняя синхронизация с ИС "Галактика" произведена 30 мая 2024 г.
     </p>
     <p class="lastupdate">
-      <span></span>
+      <span>&nbsp;</span>
       Последняя синхронизация с ИС "1С:Университет ПРОФ" произведена 30 мая 2024 г.
     </p>
     <table class="editableList"></table>
@@ -65,6 +44,11 @@
       <tr>
         <th colspan="2" class="bottom center">Академическая карточка студента</th>
       </tr>
+      <tr>
+        <td class="bottom right right w33">Фамилия, имя и отчество</td>
+        <td class="persona bottom">Шиляев Алексей Дмитриевич</td>
+      </tr>
+      <!-- <tr></tr>
       <tr></tr>
       <tr></tr>
       <tr></tr>
@@ -77,17 +61,9 @@
       <tr></tr>
       <tr></tr>
       <tr></tr>
-      <tr></tr>
-      <tr></tr>
-      <tr></tr>
+      <tr></tr> -->
     </tbody>
   </section>
-  
-  
-  <div id="sidebar">Сайбар</div>
-  <div id="main">Основное содержимое</div>
-  <div id="footer">Футер</div>
-
 </body>
 
 </html>
