--- a/css10/index.html
+++ b/css10/index.html
@@ -18,6 +18,9 @@
     </h1>
     <p>Информационная система для академической общественности АлтГПУ</p>  
   </div>
+
+  <br>
+
   <aside id="info">
     Шиляев Алексей Дмитриевич
     <span id="personinfo">
@@ -45,7 +48,7 @@
         <th colspan="2" class="bottom center">Академическая карточка студента</th>
       </tr>
       <tr>
-        <td class="bottom right right w33">Фамилия, имя и отчество</td>
+        <td class="bottom right rightb w33">Фамилия, имя и отчество</td>
         <td class="persona bottom">Шиляев Алексей Дмитриевич</td>
       </tr>
       <!-- <tr></tr>
