--- a/css10/index.html
+++ b/css10/index.html
@@ -13,12 +13,11 @@
 
 <body>
   <div id="container">
+    <div class="left__line">
     <header>
       <div id="sitename">
         <h1><a href="/">Личный кабинет</a></h1>
-        <p>Информационная система для академической общественности АлтГПУ</p>
       </div>
-      <h2 id="main-uni"><a href="https://www.altspu.ru/"><span>ФГБОУ ВО &quot;Алтайский государственный педагогический университет&quot;</span></a></h2>
       <aside id="info">
         Шиляев Алексей Дмитриевич<span id='personinfo'>
   студент
@@ -50,31 +49,31 @@
   <tr><td class='bottom rightb right w33'>Курс обучения:</td><td class='persona bottom'>1</td></tr>
   <tr><td class='bottom rightb right w33'>Группа:</td><td class='persona bottom'>3315д</td></tr>
   <tr><td class='bottom rightb right w33'>Текущий статус:</td><td class='persona bottom'>учится</td></tr>
-  </table><p>За время обучения сдал(а) зачёты, промежуточные и итоговые экзамены по следующим видам учебной деятельности:</p><table class='editableList changelog'>
+</table><p>За время обучения сдал(а) зачёты, промежуточные и итоговые экзамены по следующим видам учебной деятельности:</p><table class='editableList changelog'>
   <tr><th class='bottom rightb center'>№</th><th class='bottom rightb center'><abbr title='Семестр'>С.</abbr></th><th class='bottom rightb center'>Наименование дисциплины, курсовые работы, практика</th><th class='bottom rightb center'>Кол-во часов / <abbr title='Зачётные единицы'>З.Е.</abbr></th><th class='bottom rightb center'>Итоговая оценка</th><th class='bottom rightb center'><abbr title='Итоговая оценка в ECTS'>ECTS</abbr></th><th class='bottom center'><abbr title='Баллы'>Б.</abbr></th></tr>
   <tr><td class='bottom rightb center '>1</td>
   <td class='bottom rightb center '>1</td>
   <td class='bottom rightb '>Алгоритмизация и программирование </td>
-  <td class='bottom rightb center '>72 / 2</td>
+  <td class='bottom rightb center '>100 / 2</td>
   <td class='bottom rightb center '>зачтено</td>
   <td class='bottom rightb center '></td>
-  <td class='bottom center '><em>77</em></td>
+  <td class='bottom center '><em>100</em></td>
   </tr>
   <tr><td class='bottom rightb center '>2</td>
   <td class='bottom rightb center '>1</td>
   <td class='bottom rightb '>Архитектура компьютера </td>
   <td class='bottom rightb center '>144 / 4</td>
-  <td class='bottom rightb center '>хорошо</td>
-  <td class='bottom rightb center '>C</td>
-  <td class='bottom center '>70</td>
+  <td class='bottom rightb center '>отлично</td>
+  <td class='bottom rightb center '>А</td>
+  <td class='bottom center '>100</td>
   </tr>
   <tr><td class='bottom rightb center '>3</td>
   <td class='bottom rightb center '>1</td>
   <td class='bottom rightb '>Вычислительные системы, сети и телекоммуникации </td>
   <td class='bottom rightb center '>180 / 5</td>
-  <td class='bottom rightb center '>хорошо</td>
-  <td class='bottom rightb center '>C</td>
-  <td class='bottom center '>70</td>
+  <td class='bottom rightb center '>отлично</td>
+  <td class='bottom rightb center '>А</td>
+  <td class='bottom center '>100</td>
   </tr>
   <tr><td class='bottom rightb center '>4</td>
   <td class='bottom rightb center '>1</td>
@@ -82,15 +81,15 @@
   <td class='bottom rightb center '>72 / 2</td>
   <td class='bottom rightb center '>зачтено</td>
   <td class='bottom rightb center '></td>
-  <td class='bottom center '><em>75</em></td>
+  <td class='bottom center '><em>100</em></td>
   </tr>
   <tr><td class='bottom rightb center '>5</td>
   <td class='bottom rightb center '>1</td>
   <td class='bottom rightb '>Математика </td>
   <td class='bottom rightb center '>144 / 4</td>
-  <td class='bottom rightb center '>удовлетворительно</td>
-  <td class='bottom rightb center '>D</td>
-  <td class='bottom center '>63</td>
+  <td class='bottom rightb center '>отлично</td>
+  <td class='bottom rightb center '>А</td>
+  <td class='bottom center '>85</td>
   </tr>
   <tr><td class='bottom rightb center '>6</td>
   <td class='bottom rightb center '>1</td>
@@ -126,14 +125,55 @@
   </tr>
   <tr><td class='bottom rightb center '>10</td>
   <td class='bottom rightb center '>2</td>
+  <td class='bottom rightb '>Иностранный язык </td>
+  <td class='bottom rightb center '>72 / 2</td>
+  <td class='bottom rightb center '>зачтено</td>
+  <td class='bottom rightb center '></td>
+  <td class='bottom center '><em>70</em></td>
+  </tr>
+  <tr><td class='bottom rightb center '>11</td>
+  <td class='bottom rightb center '>2</td>
   <td class='bottom rightb '>Информационные системы и технологии </td>
   <td class='bottom rightb center '>72 / 2</td>
   <td class='bottom rightb center '>зачтено</td>
   <td class='bottom rightb center '></td>
   <td class='bottom center '><em>88</em></td>
   </tr>
-  <tr><td class='bottom right bgLightGray' colspan='4'><em>Средняя оценка за 2-й семестр</em>:</td><td class='bottom center bgLightGray'><em>0.00</em></td><td class='bottom bgLightGray' colspan='2'>&nbsp;</td></tr><tr><td class='bottom rightb right' colspan='3'>&nbsp;</td><td class='bottom rightb center'><abbr title='Всего часов и зачётных единиц'>1008&nbsp;/&nbsp;28.00</abbr></td><td class='bottom rightb center'><abbr title='Средняя оценка'>3.67</abbr></td><td class='bottom center' colspan='2'><abbr title='Средний балл'>72.30</abbr></td></tr></table>
+  <tr><td class='bottom rightb center '>12</td>
+  <td class='bottom rightb center '>2</td>
+  <td class='bottom rightb '>История России </td>
+  <td class='bottom rightb center '>72 / 2</td>
+  <td class='bottom rightb center '>отлично</td>
+  <td class='bottom rightb center '>A</td>
+  <td class='bottom center '>89</td>
+  </tr>
+  <tr><td class='bottom rightb center '>13</td>
+  <td class='bottom rightb center '>2</td>
+  <td class='bottom rightb '>Математика </td>
+  <td class='bottom rightb center '>180 / 5</td>
+  <td class='bottom rightb center '>хорошо</td>
+  <td class='bottom rightb center '>B</td>
+  <td class='bottom center '>79</td>
+  </tr>
+  <tr><td class='bottom rightb center '>14</td>
+  <td class='bottom rightb center '>2</td>
+  <td class='bottom rightb '>Оздоровительная физическая культура </td>
+  <td class='bottom rightb center '>64 / 1.78</td>
+  <td class='bottom rightb center '>зачтено</td>
+  <td class='bottom rightb center '></td>
+  <td class='bottom center '><em>90</em></td>
+  </tr>
+  <tr><td class='bottom rightb center '>15</td>
+  <td class='bottom rightb center '>2</td>
+  <td class='bottom rightb '>Программное обеспечение ЭВМ </td>
+  <td class='bottom rightb center '>108 / 3</td>
+  <td class='bottom rightb center '>зачтено</td>
+  <td class='bottom rightb center '></td>
+  <td class='bottom center '><em>100</em></td>
+  </tr>
+  <tr><td class='bottom right bgLightGray' colspan='4'><em>Средняя оценка за 2-й семестр</em>:</td><td class='bottom center bgLightGray'><em>4.50</em></td><td class='bottom bgLightGray' colspan='2'>&nbsp;</td></tr><tr><td class='bottom rightb right' colspan='3'>&nbsp;</td><td class='bottom rightb center'><abbr title='Всего часов и зачётных единиц'>1504&nbsp;/&nbsp;41.78</abbr></td><td class='bottom rightb center'><abbr title='Средняя оценка'>4.00</abbr></td><td class='bottom center' colspan='2'><abbr title='Средний балл'>76.73</abbr></td></tr></table>
       </section>
+    </div>
 </body>
 
 </html>
