--- a/js/index.html
+++ b/js/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/js/reset.css">
+    <link rel="stylesheet" href="/js/style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="app"></div>
+    <script type="module" src="/js/main.js"></script>
+
 </body>
 </html>
