--- a/js/index.html
+++ b/js/index.html
@@ -1,15 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/js/reset.css">
-    <link rel="stylesheet" href="/js/style.css">
-    <title>Document</title>
-</head>
-<body>
-    <div id="app"></div>
-    <script type="module" src="/js/main.js"></script>
+<html lang="ru">
 
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="tab-icon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/style.css">
+  <title>CSS lesson 12</title>
+</head>
+
+<body>
+  <div class="container">
+    <div class="button">
+      transition
+    </div>
+  </div>
+  <div class="container">
+    <div class="transition">
+      <div class="block red"></div>
+      <div class="block blue"></div>
+      <div class="block orange"></div>
+      <div class="block purple"></div>
+    </div>
+  </div>
 </body>
+
 </html>
